	Console methods no longer call doChangeCode, which is deprecated.  Methods such as 
		Console.get/SetPlaySleep(...) now lock on the playThreadLock
	Random number seeding in the Console is no longer immediately effective, but now
		always occurs immediately before playing.
	Loading from the Console no longer sets the random field to "UNKNOWN", but to the
		actual seed
	Made related random number seeding changes in SimpleController
	In Console and Controller, incrementSeedOnPlay renamed to incrementSeedOnStop
	Tweaked the HowTos.  
	Made Console.doAbout() protected
	Added Console.getRequiresConfirmationToStop()
	Fixed minor bug where a spurious exception is thrown if you cancel creating a chart.
		Thanks to Joey Harrison <jharri1@gmu.edu>
	Bug fix to ParallelSequence constructor
	Added disclosure triangles to ChartGenerator to reduce the clutter
	Added movie generation to ChartGenerator
	Fixed bug in handleMouseEvent calls in AdjustablePortrayal2D and MovablePortrayal2D:
		wasn't locking on model (creating race conditions).
	ValueGrid2DPortrayal3D should now be able to handle ObjectGrid2D as well (using
		the Valuable interface).
	New look for Display2D and Display3D: step field compressed into a single icon, which
		makes the window work better with small sizes.
	Updates to ChartGenerator to allow compatibility with newer versions of JFreeChart
		(which will be distributed with MASON from here on out).  Also added the ability
		to turn on/off grid lines in ChartGenerator.
	Fixed the 'ONLY' mechanism in simulation.classes
	Added methods to Console to enable turning on or off the New Simulation... menu.
	Major modifications to the Charting facility to clean it up and make it easier to add
		new charts.  This will modify the API a bit -- we've also modified the howto.html
		file to reflect the (small) changes that need to be made if you create a chart
		programmatically.
	Added Scatter Plots
	Modified Flockers to include two model elements which show off Scatter Plots